# iris

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  NOTICE  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
app/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
app/src/: App.tsx  main.tsx  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
app/src-tauri/capabilities/: connection-prompt.json  default.json
app/src-tauri/src/: elevate.rs  geo.rs  icon.rs  ipc.rs  lib.rs  main.rs  net.rs  prompt.rs  report.rs  rulectl.rs  startup.rs  svcctl.rs
app/src/components/: AppIcon.tsx  BandwidthGraph.tsx  ConnDetails.tsx  ConnectionPrompt.tsx  Icon.tsx  PanelView.tsx  ResizeEdges.tsx  Sparkline.tsx  Titlebar.tsx
app/src/lib/: alerts.test.ts  alerts.ts  apps.ts  display.ts  engine.ts  format.ts  icons.ts  path.ts  persist.ts  plugins.test.ts  plugins.ts  proposals.ts  quota.ts  rules.test.ts  rules.ts  settings.ts  theme.ts  updater.ts
app/src/tabs/: Activity.tsx  Alerts.tsx  Graph.tsx  Plugins.tsx  Protect.tsx  Settings.tsx  Usage.tsx
crates/iris-core/: Cargo.toml
crates/iris-core/src/: aggregate.rs  alert.rs  engine.rs  enrich.rs  error.rs  lib.rs  model.rs  panel.rs  rule.rs  usage.rs
crates/iris-ipc/: Cargo.toml
crates/iris-ipc/src/: codec.rs  lib.rs  message.rs  plugin.rs  transport.rs
crates/iris-platform-linux/: Cargo.toml
crates/iris-platform-linux/src/: adapters.rs  conn.rs  ct.rs  dns.rs  egress.rs  fw.rs  lib.rs  monitor.rs  netlink.rs  proc.rs  sockets.rs  spawn.rs  svc.rs  trace.rs
crates/iris-platform-win/: Cargo.toml
crates/iris-platform-win/src/: adapters.rs  conn.rs  dns.rs  egress.rs  etw.rs  lib.rs  proc.rs  spawn.rs  svc.rs  wfp.rs
crates/iris-plugin/: Cargo.toml
crates/iris-plugin/src/: lib.rs
crates/iris-store/: Cargo.toml
crates/iris-store/src/: lib.rs
service/: Cargo.toml  build.rs
service/src/: adminclient.rs  engine.rs  install.rs  main.rs  monitor.rs  paths.rs  platform.rs  rules.rs  server.rs  svc.rs  systemd.rs  tracker.rs
service/src/plugins/: builtin.rs  egress.rs  manifest.rs  mod.rs  proxy.rs  registry.rs  supervisor.rs
