[workspace]
resolver = "2"
members = [
    "crates/iris-core",
    "crates/iris-ipc",
    "app/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lintowe/iris"
authors = ["rot <96458554+lintowe@users.noreply.github.com>"]

[workspace.dependencies]
iris-core = { path = "crates/iris-core" }
iris-ipc = { path = "crates/iris-ipc" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
