[package]
name = "iris-service"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "the privileged iris engine host (Windows service)"

[[bin]]
name = "iris-engine"
path = "src/main.rs"

[dependencies]
iris-core = { workspace = true }
iris-ipc = { workspace = true, features = ["transport"] }
iris-store = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
maxminddb = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-service = { workspace = true }
iris-platform-win = { workspace = true }
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Services",
    "Win32_Security",
] }
