[package]
name = "iris-app"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Iris, a firewall and network monitor"

[lib]
name = "iris_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "iris"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
iris-core = { workspace = true }
iris-ipc = { workspace = true, features = ["transport"] }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dns-lookup = "2"
maxminddb = "0.24"

[target.'cfg(windows)'.dependencies]
png = "0.17"
base64 = "0.22"
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
