[package]
name = "iris-platform-linux"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "the Linux engine backend for iris: sock_diag monitoring, nftables rules, sandboxed plugin spawn"

[dependencies]
iris-core = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
nfq = "0.2"
