[package]
name = "iris-platform-win"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Windows engine backend for iris: ETW monitoring and WFP rules"

[dependencies]
iris-core = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[target.'cfg(windows)'.dependencies]
ferrisetw = "1.2"
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_NetworkManagement_WindowsFilteringPlatform",
    "Win32_Networking_WinSock",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Security_Cryptography",
    "Win32_System_JobObjects",
    "Win32_System_StationsAndDesktops",
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics_Etw",
    "Win32_System_RemoteDesktop",
    "Win32_System_Rpc",
    "Win32_System_Services",
] }
